# odin

./: .gitignore  Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml
backend/db/: Cargo.toml
backend/gstreamer/: Cargo.toml
backend/src/: main.rs
core/: Cargo.toml~HEAD
frontend/: Cargo.toml  Makefile.toml  README.md  index.html
frontend/http/: Cargo.toml
frontend/src/: lib.rs  page.rs
frontend/src/page/: home.rs
frontend/web/: Cargo.toml
provider/local/: Cargo.toml
src/: config.rs  main.rs  options.rs
src/page/: home.rs
store/memory/: Cargo.toml
store/sqlite/: Cargo.toml
